# vps

./: ._bar3.sh  .ft.sh.swp  .xray_mianliu.sh.swp.bak  1.sh  4.sh  4433_domain.sh  4433_domain.sh2025-12-05_10-42-13_Friday_AM_10-42  443_trusted_domain_use.sh  443_trusted_domain_use.sh_2025-11-20_16-22-49  6.sh  80.conf  80_VLESS-WSS-Nginx.sh  80_install.sh  AFFine_increase_AFFine_Cloud_Storage.sh  CHU_MoeClub_InstallNET.sh  CHU_leitbogioro_Tools_Linux_reinstall_InstallNET.sh  CHU_reinstall_debian_current.sh  CHU_reinstall_debian_current13.sh  Get_Key_Path.sh  InstallNET_modified_chu.sh  InstallNET_modified_chu.sh2023-09-20_21-48-29  LICENSE  MisakaToolbox.sh  Neo4j_setup.sh  Nextcloud_AIO_manager.sh  Nextcloud_Onlyoffice_publicip.sh  Nextcloud_Onlyoffice_publicip_domain.sh  Nextcloud_publicip_domain.sh  Reality.sh  WebDAV.sh  WebDAV.sh._user_issue  WebDAV.sh.bak.2026-05-03-122417  WebDAV.sh.bak2026-06-20_23-04-46_Saturday_PM  WebDAV.sh.bak_2026-05-28_21-45-17_Thursday_PM_old_good_no_root_tls  Xray-Nginx-Trojan-GRPC.sh  Xray-Nginx-VLESS-GRPC.sh  Xray-Nginx-VLESS-GRPC_docker.sh  Xray_No_Nginx_Trojan_Grpc.sh  \  _etc_nginx_nginx.conf  (+554 more)
file_recv_ap2/: .dockerignore  Cargo.toml  Cargo.toml2025-09-15_00-43-54  Dockerfile  Dockerfile2025-09-15_00-19-18  build.sh  docker-compose.yml  startup_port7778_file_save.sh  startup_port7778_file_save.sh.good2025-09-16_12-30-10
file_recv_ap2/src/: main.rs.bak  main.rs.bak.2026-06-16_11-21-09_Tuesday_AM  main.rs.bak2026-06-16_12-13-35_Tuesday_PM  main.rs.tiny  (+2 more)
file_recv_api/: Cargo.toml  Dockerfile  build.sh  docker-compose.yml
(+935 files in other folders)
