[package]
name = "file-recv-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"

